modulo3: homework aula 6