@@ -13,7 +13,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -32,52 +31,44 @@ public class PessoaService {
     }
 
     public List<PessoaDTO> list() {
-        List<PessoaDTO> pessoasDTO = new ArrayList<>();
-        List<Pessoa> pessoasEntity = pessoaRepository.list();
-        for (Pessoa pessoa : pessoasEntity) {
-            pessoasDTO.add(objectMapper.convertValue(pessoa, PessoaDTO.class));
-        }
-        return pessoasDTO;
+        return pessoaRepository.list().stream().map(this::pessoaToPessoaDTO).toList();
     }
 
     public PessoaDTO create(PessoaCreateDTO pessoaCreateDTO) throws RegraDeNegocioException {
         log.info("Criando pessoa...");
-        Pessoa pessoaEntity = objectMapper.convertValue(pessoaCreateDTO, Pessoa.class);
-        pessoaEntity = pessoaRepository.create(pessoaEntity);
-        PessoaDTO pessoaDTO = objectMapper.convertValue(pessoaEntity, PessoaDTO.class);
+        PessoaDTO pessoaDTO = pessoaToPessoaDTO(pessoaRepository.create(pessoaCreateDtoToPessoa(pessoaCreateDTO)));
         log.info(pessoaDTO.getNome() + " adicionado(a) ao banco de dados");
+
         emailService.sendEmailCriarPessoa(pessoaDTO);
+
         return pessoaDTO;
     }
 
     public PessoaDTO update(Integer id, PessoaCreateDTO pessoaAtualizarDTO) throws RegraDeNegocioException {
         log.info("Atualizando pessoa...");
-        Pessoa pessoaEntity = objectMapper.convertValue(pessoaAtualizarDTO, Pessoa.class);
-        pessoaEntity = pessoaRepository.update(listByIdPessoa(id), pessoaEntity);
-        PessoaDTO pessoaDTO = objectMapper.convertValue(pessoaEntity, PessoaDTO.class);
+        PessoaDTO pessoaDTO = pessoaToPessoaDTO(
+                pessoaRepository.update(listByIdPessoa(id), pessoaCreateDtoToPessoa(pessoaAtualizarDTO)));
         log.info("Dados de " + pessoaDTO.getNome() + " atualizados no banco de dados");
+
         emailService.sendEmailAlterarPessoa(pessoaDTO);
+
         return pessoaDTO;
     }
 
     public void delete(Integer id) throws RegraDeNegocioException {
-        log.warn("Deletando...");
         Pessoa pessoaDeletar = listByIdPessoa(id);
+        log.warn("Deletando...");
         pessoaRepository.delete(pessoaDeletar);
-        emailService.sendEmailDeletarPessoa(pessoaDeletar);
         log.info(pessoaDeletar.getNome() + " removida do banco de dados");
+
+        emailService.sendEmailDeletarPessoa(pessoaDeletar);
     }
 
     public List<PessoaDTO> listByName(String nome) {
-        List<PessoaDTO> pessoasDTO = new ArrayList<>();
-        List<Pessoa> pessoasEntity = pessoaRepository.list()
+        return pessoaRepository.list()
                 .stream()
                 .filter(pessoa -> pessoa.getNome().toUpperCase().contains(nome.toUpperCase()))
-                .collect(Collectors.toList());
-        for (Pessoa pessoa : pessoasEntity) {
-            pessoasDTO.add(objectMapper.convertValue(pessoa, PessoaDTO.class));
-        }
-        return pessoasDTO;
+                .toList().stream().map(this::pessoaToPessoaDTO).toList();
     }
 
     public Pessoa listByIdPessoa(Integer idPessoa) throws RegraDeNegocioException {
@@ -85,5 +76,14 @@ public class PessoaService {
                 .filter(pessoa -> pessoa.getIdPessoa().equals(idPessoa))
                 .findFirst()
                 .orElseThrow(() -> new RegraDeNegocioException("Pessoa não encontrada"));
+    }
+
+
+    public Pessoa pessoaCreateDtoToPessoa (PessoaCreateDTO pessoaCreateDTO){
+        return objectMapper.convertValue(pessoaCreateDTO, Pessoa.class);
+    }
+
+    public PessoaDTO pessoaToPessoaDTO(Pessoa pessoa) {
+        return objectMapper.convertValue(pessoa, PessoaDTO.class);
     }
 }
